--- a/Homework_0.ipynb
+++ b/Homework_0.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -70,24 +79,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!conda install -c anaconda jedi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "matrix_2 = operations(2,3)"
    ]
   },
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,25 +155,47 @@
     "    #Your code here\n",
     "    import numpy as np\n",
     "    w_t = np.transpose(weights)\n",
+    "    print(\"w_t = \", w_t)\n",
     "    mult = np.matmul(w_t,inputs)\n",
+    "    print(mult)\n",
     "    return np.tanh(mult)\n",
     "    raise NotImplementedError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w_t =  [[0.53371853 0.95297637]]\n",
+      "[[0.56601466]]\n"
+     ]
+    }
+   ],
    "source": [
     "neural = neural_network(np.random.rand(2,1), np.random.rand(2,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.67423183]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neural"
    ]
